# ratado

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/: SPECIFICATION.md  TESTING_STRATEGY.md  UI_MOCKUPS.md
docs/plan/: README.md  phase-01-foundation.md  phase-02-storage.md  phase-03-core-ui.md  phase-04-input-handling.md  phase-05-task-operations.md  phase-06-projects-tags.md  phase-07-filtering-search.md  phase-08-additional-views.md  phase-09-notifications.md  phase-10-cli.md  phase-11-configuration.md  phase-12-testing-polish.md
examples/: seed_demo.rs
scripts/: take_screenshots.ts
src/: app.rs  lib.rs  main.rs
src/handlers/: commands.rs  events.rs  input.rs  mod.rs
src/models/: filter.rs  mod.rs  project.rs  task.rs
src/notifications/: mod.rs
src/storage/: database.rs  migrations.rs  mod.rs  projects.rs  tags.rs  tasks.rs
src/storage/migrations/: 001_initial.sql
src/ui/: calendar.rs  date_picker.rs  debug.rs  description_textarea.rs  effects.rs  header.rs  help.rs  input.rs  layout.rs  mod.rs  search.rs  sidebar.rs  splash.rs  status_bar.rs  tag_input.rs  task_detail.rs  task_list.rs  theme.rs
src/ui/dialogs/: add_task.rs  confirm.rs  delete_project.rs  filter_sort.rs  mod.rs  move_to_project.rs  project.rs  quick_capture.rs  settings.rs
src/utils/: datetime.rs  ids.rs  mod.rs
tests/: e2e_tests.rs
tests/e2e/: mod.rs
