[package]
name = "ratado"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
log = "0.4.29"
notify-rust = "4.11.7"
open = "5"
ratatui = { version = "0.30.0", features = ["crossterm"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
toml = "0.9.11"
tui-logger = "0.18.0"
turso = "0.4.3"
uuid = { version = "1.19.0", features = ["v4", "serde", "v7"] }

[dev-dependencies]
insta = { version = "1.46.0", features = ["yaml"] }
pretty_assertions = "1.4.1"
