[package]
name = "ratado"
version = "0.1.0"
edition = "2024"
authors = ["Miloš Mirić"]
description = "A fast, keyboard-driven terminal task manager built with Rust and Ratatui"
license = "MIT"
repository = "https://github.com/milosmiric/ratado"
keywords = ["todo", "task", "terminal", "tui", "productivity"]
categories = ["command-line-utilities"]
readme = "README.md"
homepage = "https://github.com/milosmiric/ratado"
rust-version = "1.85"
exclude = [".github/", "docs/", ".gitignore"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
log = "0.4.29"
open = "5"
ratatui = { version = "0.30.0", features = ["crossterm"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
] }
toml = "0.9.11"
tui-logger = "0.18.0"
turso = "0.4.3"
uuid = { version = "1.19.0", features = ["v4", "serde", "v7"] }

[dev-dependencies]
insta = { version = "1.46.0", features = ["yaml"] }
pretty_assertions = "1.4.1"

# Config for 'cargo dist'
[workspace.metadata.dist]
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build for
targets = [
    "aarch64-apple-darwin",      # macOS Apple Silicon (native, no Rosetta)
    "x86_64-apple-darwin",       # macOS Intel
    "x86_64-unknown-linux-gnu",  # Linux
    "x86_64-pc-windows-msvc",    # Windows
]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
